# nerf-mv-privat

./: README.md  asset-manifest.json  index.html  precache-manifest.bad05b772f43c802c80c6a6be159d570.js  precache-manifest.ce859518c7ab7fbec78a805cc251da2c.js  precache-manifest.fe482870b3dccd18ff7b93380e5ea85f.js  service-worker.js
nerf-industrial-metaverse/: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  README.md  build.sh  ca-certificates.crt  pyproject.toml  run.sh  run_web.sh  setup-ubuntu.sh
nerf-industrial-metaverse/docker/: Dockerfile.dev  Dockerfile.init  docker-bake.hcl
nerf-industrial-metaverse/nerf_industrial_metaverse/: imgui.ini
nerf-industrial-metaverse/nerf_industrial_metaverse/common/colmap/: colmap_func.py  colmap_wrapper.py
nerf-industrial-metaverse/nerf_industrial_metaverse/common/utils/: cfgs_utils.py  client_logger.py  file_utils.py  img_utils.py  json_utils.py  transform_utils.py  video_utils.py
nerf-industrial-metaverse/nerf_industrial_metaverse/scripts_ngp/: common.py  run.py  run_training.py  scenes.py
nerf-industrial-metaverse/nerf_industrial_metaverse/tools/: export_json.py  extract_video.py  record3d_to_json.py  run_poses.py  video_to_training.py  video_training_web.py
nerf-industrial-metaverse/nerf_industrial_metaverse/viewer/client/: .gitlab-ci.yml  package-lock.json  package.json
nerf-industrial-metaverse/nerf_industrial_metaverse/viewer/client/docker/: Dockerfile  nginx.conf.template
nerf-industrial-metaverse/nerf_industrial_metaverse/viewer/server/: app.py
static/css/: 2.2d2eafc4.chunk.css.map  (+2 more)
(+41 files in other folders)
