[tool.poetry]
name = "nerf_industrial_metaverse"
version = "0.1.0"
description = ""
authors = ["Sabine Schleise <sabine.schleise@sick.de>"]
readme = "README.md"
packages = [{ include = "nerf_industrial_metaverse" }]

[[tool.poetry.source]]
name = "sick"
url = "https://deagxartifactory.sickcn.net/artifactory/api/pypi/pypi/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9.13"
setuptools = "^67.7.2"
loguru = "^0.7.0"
pyyaml = "^6.0"
pyquaternion = "^0.9.9"
tqdm = "^4.65.0"
rich = "^13.3.5"
opencv-python-headless = "^4.7.0.72"
numpy = "^1.24.2"
commentjson = "^0.9.0"
imageio = "^2.28.1"
scipy = "1.9.3"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
eventlet = "^0.33.3"
pytz = "^2023.3"

[tool.poetry.scripts]
ngp-extract="nerf_industrial_metaverse.tools.extract_video:entrypoint"
ngp-colmap="nerf_industrial_metaverse.tools.run_poses:entrypoint"
ngp-json="nerf_industrial_metaverse.tools.export_json:entrypoint"
ngp-iphone="nerf_industrial_metaverse.tools.record3d_to_json:entrypoint"
ngp-train="nerf_industrial_metaverse.scripts_ngp.run:entrypoint"
ngp-trainvideo="nerf_industrial_metaverse.tools.video_to_training:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
